homelab/apps/n8n/base/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  annotations:
    tailscale.com/funnel: "false"
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - n8n
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n
            port:
              number: 80
